tests/combined/invalid/wrong_return_type.simple
# Test 20: Incompatible return types in sequence
begin
  function int mixed_types() begin
    return true;  # Error
  end
end